# away

./: Cargo.toml  README.md  setup.iss
src/: app.rs  config.rs  main.rs  spinner.rs  ui.rs
