[package]
name = "away"
version = "0.1.0"
authors = ["Carman Babin <CBabin@slb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
chrono = "0.4.10"
#time = "0.2.7"
inputbot = "0.4.0"
device_query = "0.2.3"