[package]
name = "away"
version = "0.1.4"
authors = ["Carman Babin <carman.babin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.10"
inputbot = "0.4.0"
device_query = "0.2.3"
hhmmss = "0.1"
config = "0.11.0"
serde = "1.0.100"
serde_derive = "1.0.100"
serde_json = "1.0.40"